--- a/style/info.css
+++ b/style/info.css
@@ -235,52 +235,79 @@ p {
   margin-top: 120px;
   display: flex;
   align-items: stretch;
-  justify-content: flex-start;
-  overflow: hidden;
-  padding-bottom: 10px;
+  justify-content: center;
+  flex-wrap: wrap;
+  margin-bottom: 70px;
 }
 .section-features .feature-content .feature-item {
-  width: 275px;
-  height: 320px;
+  color: white;
+  width: 400px;
+  height: 160px;
   border-radius: 10px;
-  margin-right: 20px;
-  padding: 140px 20px;
-  background: #fff url("") 20px 40px no-repeat;
   flex: 0 0 auto;
   cursor: pointer;
+  overflow: hidden;
+  position: relative;
+}
+.section-features .feature-content .feature-item dt, .section-features .feature-content .feature-item dd {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
 }
 .section-features .feature-content .feature-item dt {
-  color: #000;
-  font-weight: bold;
   font-size: 24px;
   line-height: 29px;
-  margin-bottom: 30px;
+  font-weight: 700;
+  padding: 48px 0 48px 134px;
+  background: url("") 30px 48px no-repeat;
+  z-index: 1;
 }
 .section-features .feature-content .feature-item dd {
-  color: rgba(0, 0, 0, 0.5);
   font-size: 16px;
   line-height: 24px;
+  font-weight: 400;
+  padding: 30px;
+  transform: translateY(-20px);
+  position: relative;
+  z-index: 2;
+  opacity: 0;
 }
 .section-features .feature-content .feature-item:hover {
-  margin-top: 10px;
-  margin-bottom: -10px;
+  background-color: rgba(255, 255, 255, 0.1);
 }
-.section-features .feature-content .feature-item:nth-child(1n) {
+.section-features .feature-content .feature-item:hover dt {
+  transform: translateY(-80px);
+  opacity: 0;
+  transition-timing-function: linear;
+  transition-property: opacity, transform;
+  transition-duration: 200ms;
+}
+.section-features .feature-content .feature-item:hover dd {
+  opacity: 1;
+  transform: translateY(0);
+  transition-timing-function: linear;
+  transition-property: opacity, transform;
+  transition-duration: 200ms;
+  transition-delay: 200ms;
+}
+.section-features .feature-content .feature-item:nth-child(1n) dt {
   background-image: url("../image/list-1.svg");
 }
-.section-features .feature-content .feature-item:nth-child(2n) {
+.section-features .feature-content .feature-item:nth-child(2n) dt {
   background-image: url("../image/list-2.svg");
 }
-.section-features .feature-content .feature-item:nth-child(3n) {
+.section-features .feature-content .feature-item:nth-child(3n) dt {
   background-image: url("../image/list-3.svg");
 }
-.section-features .feature-content .feature-item:nth-child(4n) {
+.section-features .feature-content .feature-item:nth-child(4n) dt {
   background-image: url("../image/list-4.svg");
 }
-.section-features .feature-content .feature-item:nth-child(5n) {
+.section-features .feature-content .feature-item:nth-child(5n) dt {
   background-image: url("../image/list-5.svg");
 }
-.section-features .feature-content .feature-item:nth-child(6n) {
+.section-features .feature-content .feature-item:nth-child(6n) dt {
   background-image: url("../image/list-6.svg");
 }
 
@@ -1027,6 +1054,94 @@ p {
   margin: 0 auto;
 }
 
+.section-team h3 {
+  text-align: center;
+  font-size: 32px;
+  line-height: 56px;
+  font-weight: bold;
+  width: 380px;
+  margin: 62px auto;
+  position: relative;
+}
+.section-team h3:before, .section-team h3:after {
+  content: " ";
+  position: absolute;
+  width: 450px;
+  height: 1px;
+  background-color: rgba(0, 0, 0, 0.1);
+  top: 30px;
+}
+.section-team h3:before {
+  right: 50%;
+  margin-right: 225px;
+}
+.section-team h3:after {
+  left: 50%;
+  margin-left: 225px;
+}
+.section-team div {
+  font-size: 20px;
+  line-height: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+.section-team .leadership a {
+  width: 410px;
+  height: 300px;
+  border-radius: 20px;
+  margin-bottom: 40px;
+  text-align: center;
+  position: relative;
+}
+.section-team .leadership a:after {
+  content: " ";
+  position: absolute;
+  top: 170px;
+  left: 50%;
+  margin-left: -20px;
+  width: 40px;
+  height: 40px;
+  background: url("../image/team/in-dark.svg") 0 0 no-repeat;
+}
+.section-team .leadership img {
+  margin: 30px auto 50px auto;
+}
+.section-team .leadership a:hover {
+  box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.05);
+}
+.section-team .engineer dl {
+  text-align: center;
+  width: 240px;
+  height: 300px;
+}
+.section-team .engineer dl:hover {
+  box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.05);
+}
+.section-team .engineer dt img {
+  margin: 40px auto 30px auto;
+}
+.section-team .engineer dd:last-child {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.section-team .engineer dd:last-child a {
+  margin: 10px;
+}
+.section-team .advisory {
+  margin-bottom: 20px;
+}
+.section-team .advisory dl {
+  text-align: center;
+  width: 240px;
+  height: 260px;
+}
+.section-team .advisory img {
+  margin: 40px auto 30px auto;
+}
+
 .section-join {
   min-height: 600px;
   background: url("../image/circle-pair.svg") 100% 80px no-repeat, url("../image/circle-down.svg") 0 0/100% 100% no-repeat;
@@ -1331,7 +1446,44 @@ p {
     text-align: left;
   }
   .section-features .feature-content {
-    margin-top: 120px;
+    margin-top: 30px;
+  }
+  .section-features .feature-content .feature-item {
+    max-width: 100%;
+    height: auto;
+    border-bottom: 1px solid white;
+    border-radius: 0;
+    background: url("../image/arr-up-white.svg") 100% 36px no-repeat;
+  }
+  .section-features .feature-content .feature-item dt, .section-features .feature-content .feature-item dd {
+    position: relative;
+    height: auto;
+  }
+  .section-features .feature-content .feature-item dt {
+    width: 250px;
+    font-size: 20px;
+    line-height: 24px;
+    padding: 30px 0 30px 78px;
+    background-size: 48px 48px;
+    background-position: 0 30px;
+  }
+  .section-features .feature-content .feature-item dd {
+    padding: 0 0 24px 0;
+    height: auto;
+    background-color: transparent;
+    display: none;
+  }
+  .section-features .feature-content .feature-item:hover {
+    background-color: transparent;
+    background-image: url("../image/arr-down-white.svg");
+  }
+  .section-features .feature-content .feature-item:hover dt {
+    display: block;
+    opacity: 1;
+    transform: translateY(0px);
+  }
+  .section-features .feature-content .feature-item:hover dd {
+    display: block;
   }
   .section-features .control {
     justify-content: center;
