--- a/style/effect.css
+++ b/style/effect.css
@@ -26,38 +26,26 @@
   transform: translateY(30px);
   opacity: 0;
 }
-.section-product.effect li.hidden {
-  transform: translateY(40px);
+.section-product.effect dl.hidden {
+  transform: translateY(300px);
   opacity: 0;
 }
-.section-product.effect .content.action {
+.section-product.effect .content.action, .section-product.effect dl.action {
   transition-timing-function: linear;
   transition-property: opacity, transform;
   transition-duration: 600ms;
 }
-.section-product.effect h2.action, .section-product.effect li.action {
+.section-product.effect h2.action {
   transition-timing-function: linear;
   transition-property: opacity, transform;
   transition-duration: 400ms;
   transition-delay: 50ms;
 }
-.section-product.effect li.action {
-  transition-delay: 100ms;
-}
-.section-product.effect li.action:nth-child(2) {
-  transition-delay: 200ms;
-}
-.section-product.effect li.action:nth-child(3) {
-  transition-delay: 300ms;
-}
-.section-product.effect li.action:nth-child(4) {
+.section-product.effect dl.action:nth-of-type(1) {
   transition-delay: 400ms;
 }
-.section-product.effect li.action:nth-child(5) {
-  transition-delay: 500ms;
-}
-.section-product.effect li.action:nth-child(6) {
-  transition-delay: 600ms;
+.section-product.effect dl.action:nth-of-type(2) {
+  transition-delay: 700ms;
 }
 
 .token-section.effect .token-top.hidden, .token-section.effect .section-token.hidden {
