--- a/style/info.css
+++ b/style/info.css
@@ -906,7 +906,9 @@ p {
   font-size: 16px;
   line-height: 24px;
   color: rgba(0, 0, 0, 0.5);
-  text-align: center;
+  text-align: left;
+  white-space: normal;
+  word-break: break-word;
 }
 .section-roadmap dd.type {
   max-width: 210px;
@@ -1292,22 +1294,28 @@ p {
   color: #172026;
 }
 
-.about-main.content {
-  height: 720px;
-  padding-top: 200px;
-  padding-bottom: 80px;
-  background: url("../image/about-main.png") 100% center no-repeat;
-  background-size: 50% 50%;
+.about-main {
+  height: 400px;
+  background: url("../image/about-main.svg") center center no-repeat;
 }
-.about-main.content h2 {
-  font-family: Inter;
+.about-main .content {
+  color: white;
+  text-align: center;
+  width: 100%;
   max-width: 640px;
-  margin-bottom: 40px;
+  margin: 0 auto;
 }
-.about-main.content p {
-  color: rgba(255, 255, 255, 0.5);
-  max-width: 660px;
-  margin-bottom: 40px;
+.about-main .content h2 {
+  font-family: Inter;
+  font-weight: 700;
+  font-size: 60px;
+  line-height: 70px;
+  text-transform: uppercase;
+  padding-top: 90px;
+}
+.about-main .content p {
+  font-size: 60px;
+  line-height: 72px;
 }
 
 .about-trade-protocol {
@@ -1320,7 +1328,7 @@ p {
   padding-left: 52px;
   background-position: 0 0;
   background-repeat: no-repeat;
-  width: 320px;
+  width: 460px;
 }
 .about-trade-protocol dt {
   font-family: Inter;
@@ -1333,7 +1341,7 @@ p {
 .about-trade-protocol dd {
   font-size: 16px;
   line-height: 24px;
-  margin-bottom: 40px;
+  margin-bottom: 30px;
 }
 .about-trade-protocol dl:nth-child(1) {
   background-image: url("../image/trade-1.svg");
@@ -1341,15 +1349,12 @@ p {
 .about-trade-protocol dl:nth-child(2) {
   background-image: url("../image/trade-2.svg");
 }
-.about-trade-protocol dl:nth-child(3) {
-  background-image: url("../image/trade-3.svg");
-}
 
 .about-money-market {
   padding: 40px 0;
 }
 .about-money-market .right {
-  width: 320px;
+  width: 460px;
   margin-right: -140px;
   margin-left: 140px;
 }
@@ -1366,9 +1371,6 @@ p {
 .about-money-market dl:nth-child(2) {
   background-image: url("../image/market-2.svg");
 }
-.about-money-market dl:nth-child(3) {
-  background-image: url("../image/market-3.svg");
-}
 .about-money-market dt {
   font-family: Inter;
   color: black;
@@ -1380,7 +1382,7 @@ p {
 .about-money-market dd {
   font-size: 16px;
   line-height: 24px;
-  margin-bottom: 40px;
+  margin-bottom: 30px;
 }
 
 .about-staking-liquidity {
@@ -1393,7 +1395,7 @@ p {
   padding-left: 52px;
   background-position: 0 0;
   background-repeat: no-repeat;
-  width: 320px;
+  width: 460px;
 }
 .about-staking-liquidity dt {
   font-family: Inter;
@@ -1406,7 +1408,7 @@ p {
 .about-staking-liquidity dd {
   font-size: 16px;
   line-height: 24px;
-  margin-bottom: 40px;
+  margin-bottom: 30px;
 }
 .about-staking-liquidity dl:nth-child(1) {
   background-image: url("../image/staking-1.svg");
@@ -1414,8 +1416,81 @@ p {
 .about-staking-liquidity dl:nth-child(2) {
   background-image: url("../image/staking-2.svg");
 }
-.about-staking-liquidity dl:nth-child(3) {
-  background-image: url("../image/staking-3.svg");
+
+.about-storage {
+  padding: 40px 0;
+}
+.about-storage .right {
+  width: 460px;
+  margin-right: -140px;
+  margin-left: 140px;
+}
+.about-storage dl {
+  padding-right: 54px;
+  background-position: right 0;
+  background-repeat: no-repeat;
+  width: 400px;
+  text-align: right;
+}
+.about-storage dl:nth-child(1) {
+  background-image: url("../image/storage-1.svg");
+}
+.about-storage dt {
+  font-family: Inter;
+  color: black;
+  font-weight: bold;
+  font-size: 20px;
+  line-height: 24px;
+  margin-bottom: 20px;
+}
+.about-storage dd {
+  font-size: 16px;
+  line-height: 24px;
+  margin-bottom: 30px;
+}
+
+.section-contain {
+  background: url("../image/what-contain.svg") right 10px no-repeat;
+  min-height: 530px;
+  padding-bottom: 120px;
+}
+.section-contain h2 {
+  font-family: Inter;
+  margin-top: 110px;
+  font-weight: bold;
+  font-size: 40px;
+  text-transform: uppercase;
+  margin-bottom: 86px;
+}
+.section-contain dl {
+  width: 100%;
+  max-width: 540px;
+  background: url("") 0 0 no-repeat;
+  margin-bottom: 21px;
+  padding-left: 58px;
+}
+.section-contain dl:nth-of-type(1) {
+  background-image: url("../image/contain-1.svg");
+}
+.section-contain dl:nth-of-type(2) {
+  background-image: url("../image/contain-2.svg");
+}
+.section-contain dl:nth-of-type(3) {
+  background-image: url("../image/contain-3.svg");
+}
+.section-contain dl:nth-of-type(4) {
+  background-image: url("../image/contain-4.svg");
+}
+.section-contain dt {
+  font-family: Inter;
+  color: #FB822A;
+  font-size: 20px;
+  margin-bottom: 7px;
+}
+.section-contain dd {
+  color: rgba(0, 0, 0, 0.5);
+  font-size: 14px;
+  line-height: 17px;
 }
 
 @media only screen and (max-width: 1280px) {
@@ -1423,11 +1498,35 @@ p {
     padding: 70px 20px;
   }
 
+  .about-main .content {
+    padding-top: 20px;
+  }
+
+  .section-contain {
+    padding-bottom: 120px;
+    background-position: right 160px;
+  }
+
   .section-main {
     padding-top: 0;
   }
   .section-main .left {
     padding-bottom: 0;
+  }
+}
+@media only screen and (max-width: 1100px) {
+  .section-contain {
+    background-position: center 120px;
+    padding: 0 20px;
+    background-size: auto 280px;
+  }
+  .section-contain h2 {
+    margin-top: 64px;
+    font-size: 30px;
+    margin-bottom: 400px;
+  }
+  .section-contain dl:last-child {
+    margin-bottom: 60px;
   }
 }
 @media only screen and (max-width: 800px) {
@@ -1439,6 +1538,11 @@ p {
   }
   .column .right {
     padding-top: 20px;
+  }
+
+  .section-contain dl {
+    padding-left: 0;
+    background-image: none !important;
   }
 
   .section-main {
@@ -1859,10 +1963,20 @@ p {
     margin-bottom: 0;
   }
 
-  .about-main.content {
-    background-size: 100% 200px;
+  .about-main {
+    height: 300px;
+  }
+  .about-main .content {
     background-position: 100% 64px;
-    padding-top: 264px;
+  }
+  .about-main .content h2 {
+    font-size: 36px;
+    line-height: 36px;
+    padding-top: 60px;
+  }
+  .about-main .content p {
+    font-size: 24px;
+    line-height: 30px;
   }
 
   .about-trade-protocol img {
@@ -1880,14 +1994,14 @@ p {
     margin-bottom: 20px;
   }
 
-  .about-money-market {
+  .about-money-market, .about-storage {
     flex-direction: column-reverse;
   }
-  .about-money-market .right {
+  .about-money-market .right, .about-storage .right {
     margin: 0;
     margin-bottom: 20px;
   }
-  .about-money-market dl {
+  .about-money-market dl, .about-storage dl {
     background-image: none !important;
     padding-right: 0;
     width: 100%;
